tests/ui/parser/defaultness-invalid-places-fail-semantic.stderr
error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:6:5
   |
LL |     default const A: u8;
   |     -------^^^^^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:7:5
   |
LL |     default const B: u8 = 0;
   |     -------^^^^^^^^^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:8:5
   |
LL |     default type D;
   |     -------^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:9:5
   |
LL |     default type C: Ord;
   |     -------^^^^^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:10:5
   |
LL |     default fn f1();
   |     -------^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:11:5
   |
LL |     default fn f2() {}
   |     -------^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:14:1
   |
LL | default const E: u8 = 0;
   | -------^^^^^^^^^^^^^^^^^
   | |
   | `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:15:1
   |
LL | default type F = ();
   | -------^^^^^^^^^^^^^
   | |
   | `default` because of this

error: `default` is only allowed on items in trait impls
  --> $DIR/defaultness-invalid-places-fail-semantic.rs:16:1
   |
LL | default fn h() {}
   | -------^^^^^^^
   | |
   | `default` because of this

error: aborting due to 9 previous errors

